<resources>
    <string name="app_name" translatable="false">UPF</string>
    <string name="splash" translatable="false">splash</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="prompt_city">City/Town</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="client">Client</string>
    <string name="manager">Restaurant manager</string>
    <string name="delivery">Delivery guy</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="register_info">Select the type of user you want to register for:</string>
    <string name="title_activity_client_homepage" translatable="false">ClientHomepageActivity</string>
    <string name="title_activity_delivery_homepage" translatable="false">DeliveryHomepageActivity</string>
    <string name="title_activity_admin_homepage" translatable="false">AdminHomepageActivity</string>
    <string name="title_activity_restaurant_homepage" translatable="false">RestaurantHomepageActivity</string>
    <string name="title_activity_add_restaurant">Add a restaurent</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_exit">Logout</string>
    <string name="restaurant_registration_db_success">Restaurant successfully registered</string>
    <string name="empty_name">Name is required</string>
    <string name="empty_surname">Surname is required</string>
    <string name="empty_password">Password is required</string>
    <string name="empty_confirm_password">Please confirm your password</string>
    <string name="short_password">Password must have at least 6 characters</string>
    <string name="empty_email">E-mail is required</string>
    <string name="empty_phone">Phone number is required</string>
    <string name="empty_city">City is required</string>
    <string name="empty_address">Address is required</string>
    <string name="empty_description">Description is required</string>
    <string name="password_mismatch">Mismatched passwords</string>
    <string name="invalid_email">Please insert a valid e-mail</string>
    <string name="change_photo">Change photo</string>
    <string name="change_password">Change password</string>
    <string name="change_address">Change address</string>
    <string name="confirm">Confirm</string>

    <string name="load_photo">Load photo</string>

    <string name="client_registration_success">Client user successfully registered</string>
    <string name="delivery_registration_success">Delivery user successfully registered</string>
    <string name="restaurateur_registration_success">Restaurateur user successfully registered</string>
    <string name="client_registration_db_failed">DB writing for client user failed</string>
    <string name="delivery_registration_db_failed">DB writing for delivery user failed</string>
    <string name="restaurateur_registration_db_failed">DB writing for restaurateur user failed</string>
    <string name="client_registration_auth_failed">Failing in registration of client user</string>
    <string name="delivery_registration_auth_failed">Failing in registration of delivery user</string>
    <string name="restaurateur_registration_auth_failed">Failing in registration of restaurateur user</string>

    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_success">Welcome in Ultimate Pizza Frisbee</string>

    <string name="undo">Undo</string>
    <string name="add_restaurant">Add restaurant</string>
    <string name="subscription">Subscriptions</string>
    <string name="users">Users</string>
    <string name="my_restaurants">My restaurants</string>
    <string name="account_info">Account information</string>

    <string name="restaurant_registration_db_failed">Restaurant registration failed</string>
    <string name="upload_success">Upload completed</string>
    <string name="upload_failed">Upload failed</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="progress">Progress…</string>

    <string name="confirm_delete">Confirm to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="update">Updated</string>

    <string name="edit">Edit</string>
    <string name="deleted">Cancellato</string>
    <string name="add_dish">Add dish</string>
    <string name="title_activity_view_restaurant" translatable="false">Name</string>
    <string name="price">Price</string>
    <string name="dish_add_db_failed">Failing in adding the dish to the db</string>
    <string name="dish">Dishes</string>

    <string name="call">Call</string>
    <string name="write">Write</string>
    <string name="open_map">See on map</string>
    <string name="save">Save</string>

    <string name="load_image_please">Load an image, please</string>
    <string name="approved">Approve</string>
    <string name="notapproved">Decline</string>
    <string name="decline">Leave a message for the user to inform he/she why the restaurant was not accepted:</string>
    <string name="notification_rest_msg_no"> was not approved.</string>
    <string name="notification_rest_msg_yes"> was approved.</string>
    <string name="restaurant_update">Restaurants\' updates</string>
    <string name="menu_notifications">Notifications</string>

    <string name="add_order">Add order</string>
    <string name="register">Register on UPF</string>
    <string name="title_activity_new_order">New Order</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="title_activity_user_cart">My Cart</string>
    <string name="restaurateur">Restaurateur</string>
    <string name="add_subscription">Add subscription</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="new_order_menu">Select the dishes and their quantities from the restaurant menù</string>

    <string name="add_dish_to_cart_failed">Failed to add the dish to the cart</string>
    <string name="add_dish_to_cart_success">The dish is added to the cart</string>
    <string name="pay">Go on with the payment</string>
    <string name="address_payment">Address and payment</string>
    <string name="address_payment_stepview">Address and \npayment</string>

    <string name="title_activity_user_insert_address_card">Address and payment</string>
    <string name="summary">Summary</string>
    <string name="payment">Payment method</string>
    <string name="payment_stepview">Payment \nmethod</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="card_number">Card number</string>
    <string name="card_possessor">Card possessor</string>
    <string name="card_expiration">Expiration date</string>
    <string name="card_cvv" translatable="false">CVV</string>
    <string name="separator" translatable="false">/</string>
    <string name="empty_card">Card number is required</string>
    <string name="empty_card_exp">Expiration date is required</string>
    <string name="empty_card_cvv">CVV is required</string>
    <string name="number_error">Error in the number</string>
    <string name="empty_price">Price is required</string>
    <string name="price_zero">Price cannot be zero</string>
    <string name="invalid_price">Invalid price</string>
    <string name="invalid_phone_number">Invalid phone number</string>

    <string name="exit">Exit</string>
    <string name="cart_exit">Are you sure you want to quit?</string>
    <string name="cart_exit_delete">If you quit, your cart will be emptied</string>
    <string name="cart_empty">The cart is empty</string>
    <string name="confirm_order_delete">The order will be deleted and the cost will be refund</string>

    <string name="delivery_add_order_btn">Take it over</string>
    <string name="delivery_remove_order_btn">Remove order</string>
    <string name="order_ready">Ready</string>
    <string name="order_ready_wait">Ready and waiting for shipping</string>
    <string name="order_completed">Order completed</string>
    <string name="order_accepted">Order accepted</string>
    <string name="order_rejected">Order rejected</string>
    <string name="order_waiting">Order is waiting</string>
    <string name="wait_for_shipping">Order is waiting for shipping</string>
    <string name="order_accepted_delivery">Order taken over</string>
    <string name="order_cancelled_delivery">Order cancelled</string>
    <string name="delivered">Delivered</string>
    <string name="confirm_delivered">Delivery confirmed</string>
    <string name="order_deleted">Order deleted</string>
    <string name="order_delivered">Order delivered</string>
    <string name="order_cannot_delete">The order cannot be deleted, the restaurant is already processing</string>
    <string name="msg_notification_order_accepted">Your order was accepted.</string>
    <string name="msg_notification_order_not_accepted">Your order was not accepted.</string>

    <string name="msg_notification_order_take_over">Your order was took over by the delivery guy.</string>
    <string name="msg_notification_order_not_take_over">Your order has been put on hold due to a mishap.</string>
    <string name="msg_notification_order_ready_to_delivery">Your order is ready for delivery</string>
    <string name="msg_notification_order_received_by_client">The client confirmed receiving the order</string>
    <string name="msg_notification_order_delivered_success">The order was delivered to the client with success</string>
    <string name="proceed">Proceed</string>
    <string name="search_name">Search by Name</string>
    <string name="confirm_notification_delete">The notification will be deleted</string>
    <string name="notification_deleted">Notification deleted</string>
    <string name="history">Orders\' history</string>

    <string name="square" translatable="false">&#x25A0;</string>
    <string name="label_approved_restaurants">Approved</string>
    <string name="label_waiting_restaurants">Waiting</string>
    <string name="label_not_approved_restaurants">Rejected</string>
    <string name="report">Report</string>
    <string name="notification_report_msg">was reporteted by an administrator.</string>

    <string name="report_msg">Leave a message for the user to inform he/she why the restaurant was reported:</string>
</resources>