<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurant_notification"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_restaurant_orders"
            android:icon="@drawable/ic_baseline_moped_24"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_restaurant_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_restaurant_restaurants"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/my_restaurants"/>
        <item
            android:id="@+id/nav_restaurant_analytics"
            android:icon="@drawable/ic_baseline_analytics_24"
            android:title="@string/menu_analytics" />
        <item
            android:id="@+id/nav_restaurant_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_exit" />
    </group>
</menu>