<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_restaurant"
    app:startDestination="@+id/nav_restaurant_orders">

    <fragment
        android:id="@+id/nav_restaurant_orders"
        android:name="mobile.android.upf.ui.restaurant.restaurant_homepage.RestaurantOrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_home_restaurant" />

    <fragment
        android:id="@+id/nav_restaurant_profile"
        android:name="mobile.android.upf.ui.restaurant.restaurant_profile.RestaurantProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile_restaurant" />

    <fragment
        android:id="@+id/nav_restaurant_restaurants"
        android:name="mobile.android.upf.ui.restaurant.restaurant_restaurants.RestaurantRestaurantsFragment"
        android:label="@string/my_restaurants"
        tools:layout="@layout/fragment_restaurants_restaurant" />


    <fragment
        android:id="@+id/nav_restaurant_notification"
        android:name="mobile.android.upf.ui.restaurant.restaurant_notifications.RestaurantNotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications_restaurant" />

    <activity
        android:id="@+id/nav_restaurant_logout"
        android:name="mobile.android.upf.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />


</navigation>