<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp">


        <!--Name-->
        <EditText
            android:id="@+id/modify_restaurant_name_txedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Try"
            android:selectAllOnFocus="true"
            android:hint="@string/prompt_name"/>

        <!--Description-->
        <EditText
            android:id="@+id/modify_restaurant_description_txedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Try"
            android:selectAllOnFocus="true"
            android:inputType="textMultiLine"
            android:hint="@string/prompt_description"/>

        <!--email-->
        <EditText
            android:id="@+id/modify_restaurant_email_txedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Try"
            android:selectAllOnFocus="true"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"/>

        <!--address-->
        <EditText
            android:id="@+id/modify_restaurant_address_txedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Try"
            android:selectAllOnFocus="true"
            android:inputType="textPersonName"
            android:hint="@string/prompt_address"/>

        <!--phone-->
        <EditText
            android:id="@+id/modify_restaurant_phone_txedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Try"
            android:selectAllOnFocus="true"
            android:inputType="phone"
            android:hint="@string/prompt_phone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/load_photo"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/restaurant_pic_modify"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_add_photo_alternate_24" />

        <ProgressBar
            android:id="@+id/progress_bar_modify_restaurant"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>


    </LinearLayout>

</FrameLayout>