<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_client"
    app:startDestination="@+id/nav_client_orders">

    <fragment
        android:id="@+id/nav_client_orders"
        android:name="mobile.android.upf.ui.client.client_homepage.ClientOrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_home_client" />

    <fragment
        android:id="@+id/nav_client_profile"
        android:name="mobile.android.upf.ui.client.client_profile.ClientProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile_client" />

    <fragment
        android:id="@+id/nav_client_restaurants"
        android:name="mobile.android.upf.ui.client.client_restaurants.ClientRestaurantsFragment"
        android:label="@string/menu_restaurants"
        tools:layout="@layout/fragment_restaurants_client" />

    <activity
        android:id="@+id/nav_client_logout"
        android:name="mobile.android.upf.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>