<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp">


        <!--Name-->
        <EditText
            android:id="@+id/modify_dish_name_txedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Try"
            android:selectAllOnFocus="true"
            android:hint="@string/prompt_name"/>

        <!--Price-->
        <EditText
            android:id="@+id/modify_dish_price_txedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Try"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:hint="@string/price"/>

        <!--Description-->
        <EditText
            android:id="@+id/modify_dish_description_txedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Try"
            android:selectAllOnFocus="true"
            android:inputType="textMultiLine"
            android:hint="@string/prompt_description"/>


    </LinearLayout>

</FrameLayout>