<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="16dp"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/text_size_large"
                android:text="@string/register_info"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"/>


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/client_r_btn"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="@string/client"
                app:backgroundTint="@color/orange_500"
                android:textColor="@color/white"/>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/delivery_r_btn"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:text="@string/delivery"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="35dp"
                app:backgroundTint="@color/orange_500"
                android:textColor="@color/white"/>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/restauratour_r_btn"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:text="@string/restaurateur"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="35dp"
                app:backgroundTint="@color/orange_500"
                android:textColor="@color/white"/>


    </LinearLayout>

</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>